# toon-boom-extension-framework

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
docs/: AC_Responder_System.md  HarmonyPremium_QtScript.md  README.md  TULayoutView_Toolbar_Integration.md  TUWidgetLayoutView_Analysis.md  ToonBoomActionManager_Classes.md  ToonBoomLayout_Classes.md  ToonBoomLayout_ViewUsage.md  ToonBoomPlugInManager_PLUG_Services.md
example/: CMakeLists.txt  CMakePresets.json
example/_all/: CMakeLists.txt  lib_all.cpp
example/_all/include/: lib_all.hpp
example/_all/include/defs/: base.hpp  doom.hpp  simple.hpp
example/simple/: CMakeLists.txt
example/simple/src/: examples_container.cpp  simple_view.cpp  toolbar_view.cpp  widgets.cpp
example/simple/src/include/: basic_view.hpp  examples_container.hpp  toolbar_view.hpp  widgets.hpp
example/ultimate-artblock/: CMakeLists.txt
example/ultimate-artblock/src/: doom_proxy.c  doom_view.cpp  util.cpp
example/ultimate-artblock/src/include/: common.h  doom_view.hpp  toon_doom.hpp  util.hpp
framework/: CMakeLists.txt  debug.cpp  util.cpp
framework/hook/: harmony_signatures.cpp  hook.cpp  sigscan.cpp
framework/include/internal/: harmony_signatures.hpp  sigscan.hpp
framework/include/public/hooks/: toon_boom_hooks.hpp
framework/include/public/toon_boom/: PLUG_Services.hpp  ac_manager.hpp  toolbar.hpp  toon_boom_layout.hpp
framework/include/public/toon_boom/ext/: layout.hpp  util.hpp
framework/include/toon_boom/: ac_manager.hpp  toolbar.hpp  toon_boom_layout.hpp
injector/: CMakeLists.txt
injector/src/: finder.cpp  finder.h  main.cpp
